# python-fastapi-schemas

./: README.md  pyproject.toml
src/surquest/fastapi/schemas/responses/: __init__.py  base.py  info.py  message.py  metadata.py  responses.py
test/schemas/: test_args.py
